<resources>
    <string name="app_name">HSTSAPP</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_change_password">Change Password</string>
    <string name="title_activity_home">Menu</string>
    <string name="title_activity_device_scan">DeviceScanActivity</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">Unknown device</string>
    <string name="action_logout">Logout</string>


    <!-- KhuongMH -->
    <string name="hello_blank_fragment1">1111111</string>
    <string name="hello_blank_fragment2">2222222</string>
    <string name="hello_blank_fragment3">3333333</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>

    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Not A Member ? Register Now</string>
    <string name="title_activity_notice">NoticeActivity</string>
    <string name="title_activity_notify_to_doctor">NotifyToDoctor</string>

    <string-array name="nav_drawer_items">
        <item>Thông Tin Chung</item>
        <!--<item>Thức Ăn</item>-->
        <!--<item>Thuốc</item>-->
        <!--<item>Bài Tập</item>-->
        <item>Nhắc Nhở</item>
        <item>Lần Tiếp Theo</item>
    </string-array>
    <array name="nav_drawer_icons">
        <item>@android:drawable/ic_dialog_info</item>
        <!--<item>@drawable/food_icon_v1</item>-->
        <!--<item>@drawable/medicine_icon_v1</item>-->
        <!--<item>@drawable/walk_icon_v1</item>-->
        <item>@android:drawable/ic_dialog_info</item>
        <item>@android:drawable/ic_dialog_info</item>
    </array>

    <string name="desc_list_item_icon">Item Icon</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="title_activity_home2">Menu</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_notify">Notify Doctor</string>
    <string name="header_name">Health Support Tracking System</string>


    <string name="prompt_change_password_current">Current Password</string>
    <string name="prompt_change_password_new">New Password</string>
    <string name="prompt_change_password_new_confirm">Confirm New Password</string>
    <string name="change_password_update">Update Password</string>
    <string name="change_password_cancel">Cancel</string>
    <string name="change_password_error_password">Confirmed Password Is Wrong</string>
    <string name="change_password_success_password">Updated Password Successful</string>
    <string name="login_error">Wrong Username Password</string>
    <string name="title_activity_setup">IP Settings</string>
    <string name="action_settings_IP">IP Settings</string>
    <string name="action_settings">Settings</string>
    <string name="action_settings_setup">Setup</string>
    <!-- KhuongMH -->
</resources>
