<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.quyhkse61160.hstsapp.ChangePasswordActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_change_password_current"
        android:hint="@string/prompt_change_password_current"
        android:layout_gravity="center"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_change_password_new"
        android:inputType="textPassword"
        android:hint="@string/prompt_change_password_new"
        android:layout_gravity="center" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_change_password_new_confirm"
        android:inputType="textPassword"
        android:hint="@string/prompt_change_password_new_confirm"
        android:layout_gravity="center" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_change_password_cancel"

            android:layout_width="0dip"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_marginTop="16dp"
            android:layout_marginRight="5dp"
            android:background="#ce2aa7d6"
            android:text="@string/change_password_cancel"
            android:textColor="#ffffff"
            android:textStyle="bold" />
        <Button
            android:id="@+id/btn_change_password_update"

            android:layout_width="0dip"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="5dp"
            android:background="#ce2aa7d6"
            android:text="@string/change_password_update"
            android:textColor="#ffffff"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>
